--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.4.0
   google_fonts: ^6.2.1
+  http: ^1.2.1
+  provider: ^6.1.2
 
 # flutter_native_splash-development.yaml
 flutter_native_splash:
