--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,9 +55,11 @@ flutter_native_splash:
   web: false
 
 dev_dependencies:
+  build_runner: ^2.4.9
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
+  mockito: ^5.4.4
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
