--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,14 +28,18 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  android_alarm_manager_plus: ^4.0.2
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
+  flutter_local_notifications: ^17.0.0
   flutter_native_splash: ^2.4.0
   google_fonts: ^6.2.1
   http: ^1.2.1
+  intl: ^0.19.0
   provider: ^6.1.2
+  rxdart: ^0.27.7
 
 # flutter_native_splash-development.yaml
 flutter_native_splash:
