--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   intl: ^0.19.0
   provider: ^6.1.2
   rxdart: ^0.27.7
+  shared_preferences: ^2.2.2
+  sqflite: ^2.3.3
 
 # flutter_native_splash-development.yaml
 flutter_native_splash:
