--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^6.2.1
   http: ^1.2.1
   intl: ^0.19.0
+  lottie: ^3.1.0
   provider: ^6.1.2
   rxdart: ^0.27.7
   shared_preferences: ^2.2.2
